Certified Kubernetes Administrator (CKA): Services, DNS, and Ingress Networking/course-07-services-ingress-gateway/m03-gateway-api/demo5-header-and-weighted-split/catalog-route-split.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: catalog-route
  namespace: globomantics
spec:
  parentRefs:
  - name: globo-gateway
    sectionName: web
  hostnames:
  - shop.globo.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /catalog
      headers:
      - name: X-Version
        value: v2
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: catalog-v2
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /catalog
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: catalog
      port: 80
      weight: 80
    - name: catalog-v2
      port: 80
      weight: 20
